miaya-playbook/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miaya-playbook
  labels:
    name: miaya-playbook
